--- a/AssignmentC4/AssignmentC4/Areas/User/Views/Shared/_LayoutUser.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/User/Views/Shared/_LayoutUser.cshtml
@@ -60,17 +60,18 @@
 					<div class="row">
 						<div class="col-sm-12 text-left menu-1">
 							<ul>
-								<li><a asp-action="Index">Trang chủ</a></li>
+								<li><a asp-area="User" asp-controller="Home" asp-action="Index">Trang Chủ</a></li>
 								<li class="has-dropdown">
-									<a asp-action="men">Nam</a>
-
+									<a asp-area="User" asp-controller="Home" asp-action="Men">Nam</a>
 								</li>
-								<li><a asp-action="women">Nữ</a></li>
-								<li><a asp-action="about">Giới thiệu</a></li>
-								<li><a asp-action="contact">Liên hệ</a></li>
-								<li><a asp-action="Index" asp-controller="Login">Đăng Nhập</a></li>
-								<li class="cart"><a asp-action="cart"><i class="icon-shopping-cart"></i> Giỏ hàng [0]</a></li>
+								<li><a asp-area="User" asp-controller="Home" asp-action="Women">Nữ</a></li>
+								<li><a asp-area="User" asp-controller="Home" asp-action="About">Giới thiệu</a></li>
+								<li><a asp-area="User" asp-controller="Contact" asp-action="Index">Liên hệ</a></li>
+								<li><a asp-area="User" asp-controller="Login" asp-action="Index">Đăng Nhập</a></li>
+								<li class="cart"><a asp-area="User" asp-controller="Cart" asp-action="Index"><i class="icon-shopping-cart"></i> Giỏ hàng [0]</a></li>
 							</ul>
+
+
 						</div>
 					</div>
 				</div>
@@ -207,6 +208,8 @@
 	<script src="~/js/jquery.stellar.min.js"></script>
 	<!-- Main -->
 	<script src="~/js/main.js"></script>
+
+	@RenderSection("Scripts", required: false)
 
 </body>
 </html>
