--- a/AssignmentC4/AssignmentC4/Areas/User/Views/Login/Index.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/User/Views/Login/Index.cshtml
@@ -29,9 +29,8 @@
 				<a asp-action="forgotPassword">Quên mật khẩu</a>
 				<a asp-action="register">Đăng ký</a>
 			</div>
-			<div class="mt-3 text-center">
-				<a asp-action="Index" asp-controller="User" class="btn btn-secondary btn-sm">Quay về trang chủ</a>
-			</div>
+			<a asp-area="User" asp-controller="Home" asp-action="Index" class="btn btn-secondary btn-sm">Quay về trang chủ</a>
+
 		</form>
 	</div>
 
