--- a/AssignmentC4/AssignmentC4/Areas/Admin/Views/Product/Index.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/Admin/Views/Product/Index.cshtml
@@ -8,9 +8,10 @@
         <h2><i class="fas fa-box"></i> Quản Lý Sản Phẩm</h2>
     </div>
     <div class="col-md-6 text-right">
-        <a asp-action="Create" class="btn btn-primary">
+        <a asp-area="Admin" asp-controller="Product" asp-action="Create" class="btn btn-primary">
             <i class="fas fa-plus"></i> Thêm Sản Phẩm Mới
         </a>
+
     </div>
 </div>
 
