--- a/AssignmentC4/AssignmentC4/Areas/Admin/Views/Product/Delete.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/Admin/Views/Product/Delete.cshtml
@@ -51,7 +51,6 @@
                     <dd class="col-sm-9">@Model.Stock</dd>
 
                     <dt class="col-sm-3">Danh mục:</dt>
-                    <dd class="col-sm-9">@Model.Category</dd>
                 </dl>
             </div>
         </div>
@@ -59,7 +58,7 @@
         <hr>
 
         <form asp-action="Delete" method="post">
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MaSP" />
             <button type="submit" class="btn btn-danger">
                 <i class="fas fa-trash"></i> Xác Nhận Xóa
             </button>
