--- a/AssignmentC4/AssignmentC4/Areas/User/Views/Home/Index.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/User/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AssignmentC4.Areas.Admin.Models.Product>
+﻿@model IEnumerable<Product>
 <aside id="colorlib-hero">
 	<div class="flexslider">
 		<ul class="slides">
