--- a/AssignmentC4/AssignmentC4/Areas/Admin/Views/Product/Edit.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model AssignmentC4.Areas.Admin.Models.Product
+﻿@using AssignmentC4.Areas.User.Models
+@model Product
 @{
     ViewData["Title"] = "Sửa Sản Phẩm";
 }
