fix lỗi hiển thị trang chủ

--- a/AssignmentC4/AssignmentC4/Areas/User/Views/Home/Index.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/User/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
 					<div class="product-entry border">
 						<div class="d-flex justify-content-center align-content-center" style="width:100%; height: 15rem">
 							<a asp-area="User" asp-action="ProductDetail" asp-route-id="@items.MaSP" class="prod-img">
-								<img src="~/images/@items.HinhAnhDaiDien" class="img-fluid" alt="@items.TenSanPham" style="height:16rem">
+								<img src="@items.HinhAnhDaiDien" class="img-fluid" alt="Free html5 bootstrap 4 template" style="height:16rem">
 							</a>
 						</div>
 						<div class="desc">
