--- a/AssignmentC4/AssignmentC4/Areas/User/Views/Home/ProductDetail.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/User/Views/Home/ProductDetail.cshtml
@@ -30,7 +30,7 @@
                     <div class="item">
                         <div class="product-entry border">
                             <a href="#" class="prod-img">
-                                <img src="@Model.HinhAnhFile" class="img-fluid" id="img" alt="Origin">
+                                <img src="/@Model.HinhAnhDaiDien" class="img-fluid" id="img" alt="Origin">
                             </a>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                             <div class="item" data-mabt="@bt.MaBT">
                                 <div class="product-entry border d-flex justify-content-center align-content-center" style="width:100%; height:45rem">
                                     <a href="#" class="prod-img">
-                                        <img src="@img.HinhAnh" class="img-fluid" alt="@bt.MauSac" style="height:46rem">
+                                        <img src="/@img.HinhAnh" class="img-fluid" alt="@bt.MauSac" style="height:46rem">
                                     </a>
                                 </div>
                             </div>
