--- a/AssignmentC4/AssignmentC4/Areas/User/Views/Shared/_LayoutUser.cshtml
+++ b/AssignmentC4/AssignmentC4/Areas/User/Views/Shared/_LayoutUser.cshtml
@@ -51,9 +51,9 @@
 							</div>
 						</div>
 						<div class="col-sm-5 col-md-3">
-							<form action="#" class="search-wrap">
+							<form asp-area="User" asp-action="Index" asp-controller="Home" class="search-wrap">
 								<div class="form-group">
-									<input type="search" class="form-control search" placeholder="Tìm kiếm">
+									<input type="search" name="keyword" class="form-control search" placeholder="Tìm kiếm">
 									<button class="btn btn-primary submit-search text-center" type="submit"><i class="icon-search"></i></button>
 								</div>
 							</form>
